--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.0.0",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "styled-jsx": "^3.2.1",
     "uuid": "^3.2.1"
   },
