--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "google-maps-react": "^2.0.2",
+    "google-map-react": "^1.1.4",
     "moment": "^2.18.1",
-    "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.0.0",
-    "redux": "^3.7.2",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
+    "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "styled-jsx": "^3.2.1",
-    "uuid": "^3.2.1"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
