--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "singlePath": "rc-autocomplete --src 'node_modules/react-toolbox/components/**/*.js'",
     "generate": "rc-autocomplete",
     "lint": "eslint src/** src/**/**; exit 0",
-    "lint-fix": "eslint src/** src/**/** --fix; exit 0"
+    "lint-fix": "eslint src/** src/**/** --fix; exit 0",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
