--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^6.0.2",
     "google-map-react": "^1.1.4",
     "moment": "^2.18.1",
     "prop-types": "^15.7.2",
