--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-jsx": "^3.2.1",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
