Sync data with Firestore.

--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
     "firebase": "^6.0.2",
     "google-map-react": "^1.1.4",
     "moment": "^2.18.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.0.3",
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.6",
     "react-redux-firebase": "^2.2.6",
+    "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "redux": "^4.0.1",
+    "redux": "^3.7.2",
     "redux-firestore": "^0.8.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-jsx": "^3.2.1",
-    "uuid": "^3.3.2",
+    "uuid": "^3.3.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0"
   },
   "devDependencies": {
